--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <li><a href="index.html" aria-current="page">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="download.html">Download</a></li>
-          <li><a class="btn btn--ghost btn--sm" href="https://discord.gg/DfUVYwB9" target="_blank"
+          <li><a class="btn btn--ghost btn--sm" href="https://discord.gg/KH7PBhVYr7" target="_blank"
               rel="noopener">Discord</a></li>
           <li><a class="btn btn--primary btn--sm" href="download.html">Get Zylite</a></li>
         </ul>
