--- a/about.html
+++ b/about.html
@@ -150,7 +150,7 @@
         <a href="#top">Back to top <i data-lucide="arrow-up" style="width:16px;height:16px;"></i></a>
         <a href="download.html">Download</a>
         <a href="https://zylite-scripts.vercel.app/" target="_blank" rel="noopener">Script Hub</a>
-        <a href="https://discord.gg/Qdryj9y5EH" target="_blank" rel="noopener">Discord</a>
+        <a href="https://discord.gg/KH7PBhVYr7" target="_blank" rel="noopener">Discord</a>
         <a href="https://zylite-explorer.vercel.app/" target="_blank" rel="noopener">Monaco Editor</a>
       </div>
     </div>
@@ -158,5 +158,6 @@
   <script src="https://unpkg.com/lucide@latest"></script>
   <script src="script.js" defer></script>
 </body>
+
 
 </html>
