--- a/download.html
+++ b/download.html
@@ -57,7 +57,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="download.html" aria-current="page">Download</a></li>
-          <li><a class="btn btn--ghost btn--sm" href="https://discord.gg/DfUVYwB9" target="_blank"
+          <li><a class="btn btn--ghost btn--sm" href="https://discord.gg/KH7PBhVYr7" target="_blank"
               rel="noopener">Discord</a></li>
           <li><a class="btn btn--primary btn--sm" href="download.html">Get Zylite</a></li>
         </ul>
