--- a/scripts.html
+++ b/scripts.html
@@ -47,7 +47,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="download.html">Download</a></li>
-          <li><a class="btn btn--ghost btn--sm" href="https://discord.gg/Qdryj9y5EH" target="_blank"
+          <li><a class="btn btn--ghost btn--sm" href="https://discord.gg/KH7PBhVYr7" target="_blank"
               rel="noopener">Discord</a></li>
           <li><a class="btn btn--primary btn--sm" href="download.html">Get Zylite</a></li>
         </ul>
@@ -138,5 +138,6 @@
   <script src="https://unpkg.com/lucide@latest"></script>
   <script src="script.js" defer></script>
 </body>
+
 
 </html>
