Fix HTML encoding issues in about.html

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html" aria-current="page">About</a></li>
           <li><a href="download.html">Download</a></li>
-          <li><a class="btn btn--ghost btn--sm" href="https://discord.gg/Qdryj9y5EH" target="_blank"
+          <li><a class="btn btn--ghost btn--sm" href="https://discord.gg/KH7PBhVYr7" target="_blank"
               rel="noopener">Discord</a></li>
           <li><a class="btn btn--primary btn--sm" href="download.html">Get Zylite</a></li>
         </ul>
@@ -161,3 +161,4 @@
 
 
 </html>
+
