--- a/downloading.html
+++ b/downloading.html
@@ -62,7 +62,7 @@
 
         <div class="dl-footer">
           <p style="margin: 0 0 8px;">Thanks for downloading Zylite.</p>
-          <p style="margin: 0;">Need support? <a href="https://discord.gg/DfUVYwB9" target="_blank"
+          <p style="margin: 0;">Need support? <a href="https://discord.gg/KH7PBhVYr7" target="_blank"
               style="color: #fff; text-decoration: underline;">Join Discord</a></p>
           <a href="#" id="manualLink" style="display:none;">Manual Link</a>
         </div>
@@ -74,5 +74,6 @@
   <script src="https://unpkg.com/lucide@latest"></script>
   <script src="script.js" defer></script>
 </body>
+
 
 </html>
