Fix HTML formatting issues in scripts.html

--- a/scripts.html
+++ b/scripts.html
@@ -101,7 +101,7 @@
         </div>
         <p class="muted">© <span id="year"></span> <span class="muha-gradient">Zylite</span>. All rights
           reserved.</p>
-        <p class="muted">Credits: Executor Dev: cy (7kcy) · Website Dev: DertjustWhy</p>
+                <p class="muted">Credits: UI Dev: cy (7kcy) · API Dev: Joshy · Website Dev: DertjustWhy</p>
       </div>
 
       <div class="ftr__right">
@@ -141,3 +141,4 @@
 
 
 </html>
+
