Add developer credits to downloading.html
Added credits for UI, API, and website developers.

--- a/downloading.html
+++ b/downloading.html
@@ -65,6 +65,7 @@
           <p style="margin: 0;">Need support? <a href="https://discord.gg/KH7PBhVYr7" target="_blank"
               style="color: #fff; text-decoration: underline;">Join Discord</a></p>
           <a href="#" id="manualLink" style="display:none;">Manual Link</a>
+                  <p class="muted">Credits: UI Dev: cy (7kcy) · API Dev: Joshy · Website Dev: DertjustWhy</p>
         </div>
 
       </div>
@@ -77,3 +78,4 @@
 
 
 </html>
+
